# Voacl-AI-Pro

./: CMakeLists.txt  LICENSE  README.md  VocalAIPro.jucer  build.bat  build.sh
Source/: AIPitchTuner.cpp  AIPitchTuner.h  VocalAIProEditor.cpp  VocalAIProEditor.h  VocalAIProPlugin.cpp  VocalAIProPlugin.h  VocalEffects.cpp  VocalEffects.h
